<resources>
    <string name="app_name">startApp</string>
    <string name="unprocessable_entity_exception">An error occurred. Please try later</string>
    <string name="no_internet_exception">There is not internet connection. Please check your settings</string>
    <string name="file_not_found_exception">The file you\'ve selected can\'t be found</string>
    <string name="unauthorized_exception_title">Authorization error</string>
    <string name="unauthorized_exception_msg">An invalid authorization was detected. You\'ll be
        redirected to login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="euro_symbol">€</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirm">Re-enter password</string>
    <string name="log_in">Login</string>
    <string name="register">Register</string>

    <string name="error_text_is_empty">Not filled</string>

    <string name="edit_permissions">You can change the permissions manually in settings</string>
    <string name="settings">Settings</string>
    <string name="permission_dialog_title">We need this permission</string>
    <string name="permission_gallery_msg">In order to continue you must allow us to access
        your external resources</string>
    <string name="document_chooser_title">Select your document</string>
    <string name="logout">Logout</string>
    <string name="nav_menu_albums">Albums</string>
    <string name="nav_menu_explore">Explore</string>
    <string name="nav_menu_featured">Featured</string>
    <string name="nav_menu_account">My account</string>
    <string name="nav_menu_albums_viewer">Albums viewer</string>
    <string name="logout_dialog_msg">Are you sure you want to logout ?</string>
    <string name="albums_toolbar_title">Albums</string>
    <string name="option">Option</string>
    <string name="save">Save</string>
    <string name="albums_empty_subtitle">No albums yet</string>
    <string name="albums_empty_title">Ops!</string>
    <string name="people">People</string>
    <string name="account_toolbar_title">My account</string>
    <string name="account_first_name">First name</string>
    <string name="account_last_name">Last name</string>
    <string name="account_email">Email</string>
    <string name="toolbar_save_option">SAVE</string>
</resources>
