<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_kotlin"
            android:title="@string/nav_menu_albums" />
        <item
            android:id="@+id/nav_explore"
            android:icon="@drawable/ic_kotlin"
            android:title="@string/nav_menu_explore" />
        <item
            android:id="@+id/nav_people"
            android:fontFamily="@font/font_family_gotham"
            android:icon="@drawable/ic_kotlin"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_kotlin"
            android:title="@string/nav_menu_featured" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_kotlin"
            android:title="@string/nav_menu_account" />

        <item
            android:id="@+id/nav_albums_viewer"
            android:icon="@drawable/ic_kotlin"
            android:title="@string/nav_menu_albums_viewer" />
    </group>

    <group android:id="@+id/nav_footer"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/logout"/>
    </group>

</menu>
