<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/account_toolbar"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/info_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbarSize="5dp"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@id/nav_bottom_view"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/account_toolbar">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/account_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/detail_image_height"
                android:padding="@dimen/activity_vertical_margin"
                android:scaleType="centerInside"
                android:src="@drawable/ic_user_default_placeholder"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/edit_image"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_margin="12dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_edit" />

            <uriabad.com.startapp.ui.utils.views.CustomTextInputLayout
                android:id="@+id/account_first_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/account_first_name"
                android:lineSpacingExtra="4sp"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_image"
                app:text="First"
                app:textSize="16sp" />

            <uriabad.com.startapp.ui.utils.views.CustomTextInputLayout
                android:id="@+id/account_last_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:backgroundTint="@color/colorPrimary"
                android:hint="@string/account_last_name"
                android:lineSpacingExtra="4sp"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_first_name"
                app:text="Last"
                app:textSize="16sp" />

            <uriabad.com.startapp.ui.utils.views.CustomTextInputLayout
                android:id="@+id/account_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:hint="@string/account_email"
                android:lineSpacingExtra="4sp"
                android:textColorHint="@color/colorPrimary"
                android:textStyle="bold"
                app:inputType="textEmailAddress"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/account_last_name"
                app:text="Email@email.com"
                app:textSize="16sp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <include layout="@layout/nav_bottom_view"
        android:id="@+id/nav_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>